minio/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: minio-operator
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/issuer: "minio-console-letsencrypt-prod"
spec:
  rules: 
  - host: "minio-console.k8s.rendyananta.my.id"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: console
            port:
              number: 9090
  tls:
  - hosts:
      - "minio-console.k8s.rendyananta.my.id"
    secretName: "minio-console-tls"
